--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>ohmyfood.yuko</title>
 
     <!-- Place this data between the <head> tags of your website -->
-    
-    <meta name="description" content="Looking for goods restaurants - Compose your own menu"/>
+
+    <meta name="description" content="Looking for goods restaurants - Compose your own menu" />
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="ohmyfood">
@@ -23,108 +23,109 @@
     <meta property="og:description" content="Looking for goods restaurants - Compose your own menu" />
 </head>
 
-<div class="spinner">
+<body>
+    <div class="spinner">
 
-    <header class="spinner__background">
-        <h1>ohmyfood</h1>
-    </header>
+        <header class="spinner__background">
+            <h1>ohmyfood</h1>
+        </header>
 
-    <section class="location">
-        <i class="fas fa-map-marker-alt"></i>
-        <span>Paris, Belleville</span>
-    </section>
+        <section class="location">
+            <i class="fas fa-map-marker-alt"></i>
+            <span>Paris, Belleville</span>
+        </section>
 
-    <section class="explorer">
-        <h2>Réserver le menu qui<br />vous convient</h2>
-        <p>Découvrez des restaurants d'exception,<br />séléctionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
-    </section>
+        <section class="explorer">
+            <h2>Réserver le menu qui<br />vous convient</h2>
+            <p>Découvrez des restaurants d'exception,<br />séléctionnés par nos soins.</p>
+            <button>Explorer nos restaurants</button>
+        </section>
 
-    <section class="steps">
-        <h2>Fonctionnement</h2>
-        <div class="flex-buttons">
-            <button>
-                <span class="step-number">1</span>
-                <i class="fas fa-mobile-alt"></i>
-                <span>Choisissez un restaurant</span>
-            </button>
-            <button>
-                <span class="step-number">2</span>
-                <i class="fas fa-list-ul"></i>
-                <span>Composez votre menu</span>
-            </button>
-            <button>
-                <span class="step-number">3</span>
-                <i class="fas fa-store"></i>
-                <span>Dégustez au restaurant</span>
-            </button>
-        </div>
-    </section>
-    <section class="restaurants-index">
-        <h2>Restaurants</h2>
-        <div class="media-flex-retaurants">
-            <div class="part">
-                <a href="page1.html">
-                    <div class="restaurants">
-                        <div class="restaurants__picture picture1"></div>
-                        <span class="new">Nouveau</span>
-                        <div class="restaurants__describ">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </div>
-                </a>
+        <section class="steps">
+            <h2>Fonctionnement</h2>
+            <div class="flex-buttons">
+                <button>
+                    <span class="step-number">1</span>
+                    <i class="fas fa-mobile-alt"></i>
+                    <span>Choisissez un restaurant</span>
+                </button>
+                <button>
+                    <span class="step-number">2</span>
+                    <i class="fas fa-list-ul"></i>
+                    <span>Composez votre menu</span>
+                </button>
+                <button>
+                    <span class="step-number">3</span>
+                    <i class="fas fa-store"></i>
+                    <span>Dégustez au restaurant</span>
+                </button>
             </div>
-            <div class="part">
-                <a href="page2.html">
-                    <div class="restaurants">
-                        <div class="restaurants__picture picture2"></div>
-                        <span class="new">Nouveau</span>
-                        <div class="restaurants__describ">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
-                            <i class="far fa-heart"></i>
+        </section>
+        <section class="restaurants-index">
+            <h2>Restaurants</h2>
+            <div class="media-flex-retaurants">
+                <div class="part">
+                    <a href="page1.html">
+                        <div class="restaurants">
+                            <div class="restaurants__picture picture1"></div>
+                            <span class="new">Nouveau</span>
+                            <div class="restaurants__describ">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="media-flex-retaurants">
-            <div class="part">
-                <a href="page3.html">
-                    <div class="restaurants">
-                        <div class="restaurants__picture picture3"></div>
-                        <div class="restaurants__describ">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
-                            <i class="far fa-heart"></i>
+                    </a>
+                </div>
+                <div class="part">
+                    <a href="page2.html">
+                        <div class="restaurants">
+                            <div class="restaurants__picture picture2"></div>
+                            <span class="new">Nouveau</span>
+                            <div class="restaurants__describ">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
-            <div class="part">
-                <a href="page4.html">
-                    <div class="restaurants">
-                        <div class="restaurants__picture picture4"></div>
-                        <div class="restaurants__describ">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                            <i class="far fa-heart"></i>
+            <div class="media-flex-retaurants">
+                <div class="part">
+                    <a href="page3.html">
+                        <div class="restaurants">
+                            <div class="restaurants__picture picture3"></div>
+                            <div class="restaurants__describ">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
+                <div class="part">
+                    <a href="page4.html">
+                        <div class="restaurants">
+                            <div class="restaurants__picture picture4"></div>
+                            <div class="restaurants__describ">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
-        </div>
-    </section>
-    <footer>
-        <h3>ohmyfood</h3>
-        <ul>
-            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
-        </ul>
-    </footer>
+        </section>
+        <footer>
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+            </ul>
+        </footer>
     </div>
-    </body>
+</body>
